@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

package Logic as LogicPackage {

package "Parser Classes" as ParserClasses {
}

class AddCommand
class EditCommand
class DeleteCommand
class FindCommand
class FindNoteCommand
class StatusCommand
class SortCommand
class UndoCommand
class RedoCommand
class CommandResult
class "{abstract}\nCommand" as Command

class "<<interface>>\nLogic" as Logic
class LogicManager
}

package Model {
class HiddenModel #FFFFFF
}

package Storage {
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Logic

LogicManager .right.|> Logic
LogicManager -right-> "1" ParserClasses

ParserClasses ..> AddCommand : <<create>>
ParserClasses ..> EditCommand : <<create>>
ParserClasses ..> DeleteCommand : <<create>>
ParserClasses ..> FindCommand : <<create>>
ParserClasses ..> FindNoteCommand : <<create>>
ParserClasses ..> StatusCommand : <<create>>
ParserClasses ..> SortCommand : <<create>>
ParserClasses ..> UndoCommand : <<create>>
ParserClasses ..> RedoCommand : <<create>>

AddCommand -up-|> Command
EditCommand -up-|> Command
DeleteCommand -up-|> Command
FindCommand -up-|> Command
FindNoteCommand -up-|> Command
StatusCommand -up-|> Command
SortCommand -up-|> Command
UndoCommand -up-|> Command
RedoCommand -up-|> Command

LogicManager .left.> Command : <<call>>

LogicManager --> Model
LogicManager --> Storage
Storage --[hidden] Model
Command .[hidden]up.> Storage
Command .right.> Model

note right of AddCommand: Example concrete commands,\nnot an exhaustive list

Logic ..> CommandResult
LogicManager .down.> CommandResult
Command .up.> CommandResult : <<create>>
@enduml
